feat(directory-service): add auth foundation
